--- a/main.css
+++ b/main.css
@@ -383,10 +383,14 @@ video {
   margin-bottom: 25px;
 }.mb-\[32px\]{
   margin-bottom: 32px;
+}.mb-\[38px\]{
+  margin-bottom: 38px;
 }.mb-\[8px\]{
   margin-bottom: 8px;
 }.mb-\[95px\]{
   margin-bottom: 95px;
+}.mb-\[96px\]{
+  margin-bottom: 96px;
 }.ml-auto{
   margin-left: auto;
 }.mr-0{
@@ -433,6 +437,8 @@ video {
   min-width: 130px;
 }.max-w-\[590px\]{
   max-width: 590px;
+}.max-w-\[640px\]{
+  max-width: 640px;
 }.max-w-\[690px\]{
   max-width: 690px;
 }.max-w-\[730px\]{
@@ -459,6 +465,8 @@ video {
   gap: 20px;
 }.gap-\[24px\]{
   gap: 24px;
+}.gap-\[32px\]{
+  gap: 32px;
 }.gap-\[40px\]{
   gap: 40px;
 }.overflow-auto{
@@ -472,16 +480,27 @@ video {
 }.bg-\[\#EEE\]{
   --tw-bg-opacity: 1;
   background-color: rgb(238 238 238 / var(--tw-bg-opacity));
+}.bg-dark{
+  background-color: rgb(var(--color-dark) / 1);
 }.bg-primary{
   background-color: rgb(var(--color-primary) / 1);
 }.bg-white{
   background-color: rgb(var(--color-white) / 1);
+}.bg-\[url\(\'\.\.\/img\/banner\.svg\'\)\]{
+  background-image: url(2054a26bca9af44b4555.svg);
+}.bg-cover{
+  background-size: cover;
+}.bg-center{
+  background-position: center;
 }.px-\[12px\]{
   padding-left: 12px;
   padding-right: 12px;
 }.px-\[23px\]{
   padding-left: 23px;
   padding-right: 23px;
+}.px-\[26px\]{
+  padding-left: 26px;
+  padding-right: 26px;
 }.px-\[48px\]{
   padding-left: 48px;
   padding-right: 48px;
@@ -494,6 +513,9 @@ video {
 }.py-\[23px\]{
   padding-top: 23px;
   padding-bottom: 23px;
+}.py-\[72px\]{
+  padding-top: 72px;
+  padding-bottom: 72px;
 }.pl-\[24px\]{
   padding-left: 24px;
 }.pt-\[60px\]{
@@ -512,6 +534,8 @@ video {
   font-size: 24px;
 }.text-\[32px\]{
   font-size: 32px;
+}.font-bold{
+  font-weight: 700;
 }.font-extrabold{
   font-weight: 800;
 }.font-semibold{
@@ -595,15 +619,14 @@ video {
   border-radius: 5px;
   content: var(--tw-content);
   background-color: rgb(var(--color-primary) / 1);
-}@media (min-width: 768px){.title::before{
-    content: var(--tw-content);
-    height: 82px;
-  }
 }@media (min-width: 1024px){.title{
     margin-bottom: 24px;
   }
 }@media (min-width: 1200px){.title{
     font-size: 48px;
+  }.title::before{
+    content: var(--tw-content);
+    height: 82px;
   }
 }.before\:absolute::before{
   content: var(--tw-content);
@@ -661,15 +684,41 @@ video {
 }.before\:\[counter-increment\:problems-counter\]::before{
   content: var(--tw-content);
   counter-increment: problems-counter;
+}.after\:absolute::after{
+  content: var(--tw-content);
+  position: absolute;
+}.after\:bottom-\[-10px\]::after{
+  content: var(--tw-content);
+  bottom: -10px;
+}.after\:left-0::after{
+  content: var(--tw-content);
+  left: 0px;
+}.after\:h-\[4px\]::after{
+  content: var(--tw-content);
+  height: 4px;
+}.after\:w-\[111px\]::after{
+  content: var(--tw-content);
+  width: 111px;
+}.after\:rounded-s::after{
+  content: var(--tw-content);
+  border-radius: var(--border-radius-s);
+}.after\:bg-primary::after{
+  content: var(--tw-content);
+  background-color: rgb(var(--color-primary) / 1);
 }.hover\:shadow-m:hover{
   --tw-shadow:  0px 4px 14px 0px rgba(0, 0, 0, 0.16);
   --tw-shadow-colored: 0px 4px 14px 0px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}@media (min-width: 520px){.sm\:grid-cols-2{
+}@media (min-width: 520px){.sm\:mx-auto{
+    margin-left: auto;
+    margin-right: auto;
+  }.sm\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }@media (min-width: 768px){.md\:mb-\[16px\]{
     margin-bottom: 16px;
+  }.md\:mb-\[32px\]{
+    margin-bottom: 32px;
   }.md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }.md\:items-center{
@@ -680,9 +729,6 @@ video {
     font-size: 20px;
   }.md\:text-\[42px\]{
     font-size: 42px;
-  }.md\:before\:h-\[82px\]::before{
-    content: var(--tw-content);
-    height: 82px;
   }
 }@media (max-width: 767px){.mmd\:min-h-\[100vh\]{
     min-height: 100vh;
@@ -691,6 +737,18 @@ video {
   }
 }@media (min-width: 1024px){.lg\:mb-\[24px\]{
     margin-bottom: 24px;
+  }.lg\:mb-\[32px\]{
+    margin-bottom: 32px;
+  }.lg\:mb-\[48px\]{
+    margin-bottom: 48px;
+  }.lg\:grid-cols-\[545px_1fr\]{
+    grid-template-columns: 545px 1fr;
+  }.lg\:items-center{
+    align-items: center;
+  }.lg\:text-\[16px\]{
+    font-size: 16px;
+  }.lg\:text-\[20px\]{
+    font-size: 20px;
   }
 }@media (min-width: 1200px){.cnt\:absolute{
     position: absolute;
@@ -724,6 +782,8 @@ video {
     margin-bottom: 160px;
   }.cnt\:mb-\[16px\]{
     margin-bottom: 16px;
+  }.cnt\:mb-\[170px\]{
+    margin-bottom: 170px;
   }.cnt\:mb-\[360px\]{
     margin-bottom: 360px;
   }.cnt\:mb-\[40px\]{
@@ -775,6 +835,8 @@ video {
     gap: 24px;
   }.cnt\:gap-\[32px\]{
     gap: 32px;
+  }.cnt\:gap-\[66px\]{
+    gap: 66px;
   }.cnt\:gap-x-\[126px\]{
     -moz-column-gap: 126px;
          column-gap: 126px;
@@ -816,6 +878,9 @@ video {
     font-size: 48px;
   }.cnt\:text-\[64px\]{
     font-size: 64px;
+  }.cnt\:before\:h-\[82px\]::before{
+    content: var(--tw-content);
+    height: 82px;
   }
 }@media (min-width: 1920px){.xxl\:top-\[200px\]{
     top: 200px;
