--- a/main.css
+++ b/main.css
@@ -450,6 +450,8 @@ video {
   width: 38px;
 }.w-\[40px\]{
   width: 40px;
+}.w-\[90\%\]{
+  width: 90%;
 }.min-w-\[130px\]{
   min-width: 130px;
 }.min-w-\[26px\]{
@@ -522,8 +524,12 @@ video {
   border-radius: var(--border-radius-s);
 }.border{
   border-width: 1px;
+}.border-b-\[2px\]{
+  border-bottom-width: 2px;
 }.border-grayLight{
   border-color: rgb(var(--color-gray-light) / 1);
+}.border-b-primary{
+  border-bottom-color: rgb(var(--color-primary) / 1);
 }.bg-\[\#EEE\]{
   --tw-bg-opacity: 1;
   background-color: rgb(238 238 238 / var(--tw-bg-opacity));
@@ -595,6 +601,8 @@ video {
   font-size: 20px;
 }.text-\[24px\]{
   font-size: 24px;
+}.text-\[25px\]{
+  font-size: 25px;
 }.text-\[32px\]{
   font-size: 32px;
 }.\!font-normal{
@@ -790,13 +798,19 @@ video {
 }@media (min-width: 520px){.sm\:mx-auto{
     margin-left: auto;
     margin-right: auto;
+  }.sm\:max-w-\[250px\]{
+    max-width: 250px;
   }.sm\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
-}@media (min-width: 768px){.md\:mb-\[16px\]{
+}@media (min-width: 768px){.md\:mb-\[10px\]{
+    margin-bottom: 10px;
+  }.md\:mb-\[16px\]{
     margin-bottom: 16px;
   }.md\:mb-\[32px\]{
     margin-bottom: 32px;
+  }.md\:ml-0{
+    margin-left: 0px;
   }.md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }.md\:items-center{
@@ -868,6 +882,8 @@ video {
     margin-bottom: 170px;
   }.cnt\:mb-\[24px\]{
     margin-bottom: 24px;
+  }.cnt\:mb-\[30px\]{
+    margin-bottom: 30px;
   }.cnt\:mb-\[32px\]{
     margin-bottom: 32px;
   }.cnt\:mb-\[34px\]{
@@ -912,6 +928,8 @@ video {
     min-width: 200px;
   }.cnt\:min-w-\[780px\]{
     min-width: 780px;
+  }.cnt\:max-w-\[350px\]{
+    max-width: 350px;
   }.cnt\:\!translate-y-\[-50\%\]{
     --tw-translate-y: -50% !important;
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
